2007-11-07  Tambet Ingo  <tambet@gmail.com>

	* src/*: The NMSetting API changed significantly, adapt the changes.

	* src/gconf-helpers/gconf-helpers.c 
	(copy_one_setting_value_to_gconf):
	(read_one_setting_value_from_gconf): Now that the NM_S_TYPE_* types are gone,
	convert between GType / GConf types.

2007-11-06  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
		- #define the applet private connection tags that are used for things
			not passed to NetworkManager directly in the connection info

	* src/gconf-helpers/gconf-upgrade.c
		- Use the new tags

2007-11-06  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.c
	  src/utils/crypto.h
	  src/utils/crypto_nss.c
	  src/utils/crypto_gnutls.c
	  src/utils/Makefile.am
	  configure.ac
		- Add bits to handle decoding certificates and keys, and for decrypting
		private keys to send to the supplicant.  Implementations for NSS and
		gnutls are provided with NSS as the default unless selected differently
		at configure time with --with-nss=[yes|no] and --with-gnutls=[yes|no]

2007-10-31  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
	  src/utils/utils.h
		- (utils_get_device_description): new function; be more clever about
			constructing the device description from the product and vendor
			strings

	* src/wireless-dialog.c
		- (add_device_to_model): use add_device_to_model()

	* src/applet.c
		- (sort_devices): use add_device_to_model(), don't segfault if a
			description can't be created (rh #337191)

	* src/menu-items.c
		- (add_device_to_model): use add_device_to_model()

2007-10-27  Dan Williams  <dcbw@redhat.com>

	Patch from Dan Winship <dwinship@redhat.com>

	* gconf-helpers/gconf-helpers.c
	  gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_all_connections): convert entries if needed

	* gconf-helpers/Makefile.am
	  gconf-helpers/gconf-upgrade.c
	  gconf-helpers/gconf-upgrade.h
		- Convert GConf entries from old format to new format

	* gconf-helpers/Makefile.am